Fixing the migration and adding new functionality
